# LEXIN

./: .gitignore  CMakeLists.txt  README.md  build_firmware.bat  check_proxy.bat  deepseek_config.example.ps1  export_advisor_model.bat  flash_firmware.bat  install_proxy_startup.bat  partitions.csv  sdkconfig.defaults  start_demo.bat  start_proxy.bat  start_proxy_live.bat  train_emotion_model.bat
components/human_face_detect/: idf_component.yml
components/lexin_face_auth/: CMakeLists.txt  lexin_face_auth.c
components/lexin_face_auth/include/: lexin_face_auth.h
components/lexin_vision/: CMakeLists.txt  README.md  lexin_vision.c
components/lexin_vision/include/: lexin_vision.h
components/lexin_vision/port/: echomate_config.h  echomate_types.h  expression_adapter.c  expression_adapter.h  expression_adapter_esp_dl.cpp  expression_adapter_esp_dl.h  face_detector_adapter.c  face_detector_esp_who.cpp  face_detector_esp_who.h  vision_input.c  vision_model.c
components/lexin_voice/: CMakeLists.txt  lexin_voice.c
components/lexin_voice/include/: lexin_voice.h
components/workbuddy_vision/: CMakeLists.txt  README.md  workbuddy_vision.c
components/workbuddy_vision/include/: workbuddy_vision.h
components/workbuddy_vision/port/: camera_port.c  echomate_app.h  echomate_config.h  echomate_types.h  emotion_engine.c  expression_adapter.c  expression_adapter_esp_dl.cpp  expression_adapter_esp_dl.h  face_detector_esp_who.cpp  vision_input.c
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  lexin_actions.c  lexin_actions.h  lexin_cn_20.c  lexin_cn_28.c  lexin_display_test.c  lexin_display_test.h  lexin_edge_advisor.cpp  lexin_edge_advisor.h  lexin_interaction.c  lexin_interaction.h  lexin_launcher.c  lexin_launcher.h  lexin_main.c  lexin_triggers.h  lexin_wifi.h  workbuddy_actions.c  workbuddy_actions.h  workbuddy_cn_20.c  workbuddy_cn_28.c  workbuddy_display_test.c  workbuddy_display_test.h  workbuddy_edge_advisor.cpp  workbuddy_launcher.c  workbuddy_launcher.h  workbuddy_main.c  workbuddy_triggers.h
main/models/: expression.espdl  lexin_advisor.espdl
tools/: EMOTION_MODEL_README.md  FACE_EMBEDDING_README.md  asr_funasr.py  check_new_pc.ps1  export_emotion_espdl.py  export_lexin_advisor_espdl.py  face_embedding.py  generate_lexin_fonts.js  generate_workbuddy_fonts.js  install_proxy_startup.ps1  lexin_proxy.js  set_deepseek_key.ps1  setup_asr.ps1  start_lexin_proxy.ps1  start_lexin_proxy_live.ps1  start_workbuddy_proxy.ps1  test_voice_stream.js  train_emotion_fer2013.py  workbuddy_proxy.js
tools/emotion/: emotion_eval_report.txt
tools/face_models/: README.md
